--- a/src/components/SourceSelector.css
+++ b/src/components/SourceSelector.css
@@ -7,6 +7,8 @@
   top: 0;
   right: 0;
   height: 100vh;
+  height: 100dvh;
+  -webkit-overflow-scrolling: touch;
   width: 360px;
   overflow-y: auto;
   transform: translateX(100%);
@@ -344,6 +346,7 @@
   .source-selector-container {
     width: 100%;
     height: 60vh;
+    height: 60dvh;
     bottom: 0;
     top: auto;
     left: 0;
